<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSecondary"
    tools:context=".introslider.IntroSliderActivity2">

    <ImageView
        android:id="@+id/iv_intro3"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/intro3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title_intro2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="#80000000"
        android:shadowDx="4"
        android:shadowDy="4"
        android:shadowRadius="6"
        android:text="@string/title_slider2"
        android:textAlignment="center"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_intro3" />

    <TextView
        android:id="@+id/tv_text_intro3"
        style="@style/text_intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description_slider2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_intro2" />

    <ImageButton
        android:id="@+id/btn_next_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_colorprimary2"
        android:contentDescription="@string/next"
        android:padding="8dp"
        android:src="@drawable/ic_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_text_intro3"
        tools:ignore="TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>