<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSecondary"
    tools:context=".login.RegisterActivity">

    <ImageView
        android:id="@+id/iv_logo_register"
        android:layout_width="380dp"
        android:layout_height="256dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo_app2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text="@string/create_account"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_name_register"
        style="@style/edittext_costum"
        android:layout_width="327dp"
        android:layout_height="44dp"
        android:layout_marginHorizontal="24dp"
        android:autofillHints=""
        android:background="@drawable/rounded_white"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo_register" />

    <EditText
        android:id="@+id/edt_gender_register"
        style="@style/edittext_costum"
        android:layout_width="327dp"
        android:layout_height="44dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:background="@drawable/rounded_white"
        android:hint="@string/gender"
        android:inputType="text"
        android:padding="12dp"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_name_register" />

    <EditText
        android:id="@+id/edt_email_register"
        style="@style/edittext_costum"
        android:layout_width="327dp"
        android:layout_height="44dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:background="@drawable/rounded_white"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_gender_register" />

    <EditText
        android:id="@+id/edt_password_register"
        style="@style/edittext_costum"
        android:layout_width="328dp"
        android:layout_height="46dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:background="@drawable/rounded_white"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.714"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_email_register" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/pink2"
        android:text="@string/register"
        android:textSize="13sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.604"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_password_register" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="27dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="266dp"
        app:srcCompat="@drawable/ic_account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="25dp"
        android:layout_height="20dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="326dp"
        app:srcCompat="@drawable/ic_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="30dp"
        android:layout_height="24dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="450dp"
        app:srcCompat="@drawable/___1_"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="25dp"
        android:layout_height="26dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="391dp"
        app:srcCompat="@drawable/___2_"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>